Iteración 7 (fixes: cambiado el color de los enlaces a salas públicas de la pantalla de inicio por problemas de visibilidad)

--- a/client_browser/css/styles.css
+++ b/client_browser/css/styles.css
@@ -76,6 +76,10 @@ a {
     font-weight: bold;
 }
 
+#publicRooms a {
+    color: #1fdfdf;
+}
+
 #publicRooms ul {
     list-style-type: none;
 }
